--- a/2-ChangeSet-SGDescription.yaml
+++ b/2-ChangeSet-SGDescription.yaml
@@ -60,12 +60,8 @@ Resources:
   MySecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
-      GroupDescription: Open Ports 22 and 80
+      GroupDescription: Open Port 80 for website
       SecurityGroupIngress:
-      - IpProtocol: tcp
-        FromPort: '22'
-        ToPort: '22'
-        CidrIp: 0.0.0.0/0
       - IpProtocol: tcp
         FromPort: '80'
         ToPort: '80'
