--- a/4-ChangeSet-SGDescription.yaml
+++ b/4-ChangeSet-SGDescription.yaml
@@ -5,6 +5,12 @@ Parameters:
   KeyName:
     Description: Name of an existing EC2 KeyPair to enable SSH access into the server
     Type: AWS::EC2::KeyPair::KeyName
+  VpcId:
+    Description: Enter the VpcId
+    Type: AWS::EC2::VPC::Id
+  SubnetId:
+    Description: Enter the SubnetId
+    Type: AWS::EC2::Subnet::Id
 Mappings:
   RegionMap:
     us-east-1:
@@ -45,6 +51,7 @@ Resources:
         - AMI
       SecurityGroupIds:
         - !Ref MySecurityGroup
+      SubnetId: !Ref SubnetId
       Tags:
         - Key: Name
           Value: !Ref NameOfService
@@ -60,12 +67,9 @@ Resources:
   MySecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
-      GroupDescription: Open Ports 22 and 80
+      GroupDescription: Open Port 80 for website
+      VpcId: !Ref VpcId
       SecurityGroupIngress:
-      - IpProtocol: tcp
-        FromPort: '22'
-        ToPort: '22'
-        CidrIp: 0.0.0.0/0
       - IpProtocol: tcp
         FromPort: '80'
         ToPort: '80'
